--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,9 +21,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.9', '3.10', '3.11', '3.12', '3.13', '3.14']
-        include:
-          - python-version: '3.14'
-            only-minimal: true
 
     steps:
     - uses: actions/checkout@v4
@@ -34,10 +31,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies complete
       if: matrix.only-minimal != true
-      run: uv sync --dev --all-extras
+      run: uv sync --dev --extra all --all-groups
     - name: Install dependencies minimal
       if: matrix.only-minimal == true
-      run: uv sync --dev --extra=all
+      run: uv sync --dev
     - name: Unit tests
       run: uv run pytest -n auto
     - name: Notebook flow tests
