--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,11 +5,14 @@
 version: 2
 
 build:
-  os: "ubuntu-22.04"
+  os: "ubuntu-24.04"
   tools:
-    python: "3.11"
+    python: "3.13"
   apt_packages:
     - xvfb
+    - mesa-utils
+    - libgl1-mesa-dri
+    - libglx-mesa0
   jobs:
     pre_create_environment:
        - asdf plugin add uv
