--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -38,3 +38,8 @@ jobs:
         uv pip install "./tools/odbclient"
     - name: Build docs
       run: sphinx-build -W -b html docs _build/html
+    - name: Upload docs
+      uses: actions/upload-artifact@v4
+      with:
+        name: docs
+        path: ./_build/html
